feat: tweak style form and id input

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,4 +1,34 @@
 {
-  "home": "Home",
-  "buttonLabel": "Click me"
+  "homeButton": "Home",
+  "test1": "Test 1",
+  "layoutAndStyle": "Layout & Style",
+  "test2": "Test 2",
+  "formAndTable": "Form & Table",
+  "move": "Move Shape",
+  "position": "Move Position",
+  "submitButton": "Submit",
+  "resetButton": "Reset",
+  "title": "Title",
+  "mr": "Mr.",
+  "mrs": "Mrs.",
+  "miss": "Miss",
+  "firstName": "First Name",
+  "lastName": "Last Name",
+  "birthDate": "Birth Date",
+  "selectDate": "Select Date",
+  "nation": "Nationality",
+  "option": "- - Option - -",
+  "american": "American",
+  "chinese": "Chinese",
+  "thai": "Thai",
+  "nationId": "Identification ID",
+  "gender": "Gender",
+  "male": "Male",
+  "female": "Female",
+  "preferNotSay": "Prefer not to say",
+  "phoneNumber": "Phone Number",
+  "passportId": "Passport ID",
+  "expectedSalary": "Expected Salary",
+  "name": "Name",
+  "operation": "Operation"
 }
