--- a/src/locales/th.json
+++ b/src/locales/th.json
@@ -1,4 +1,34 @@
 {
-  "home": "หน้าหลัก",
-  "buttonLabel": "Cliquez ici"
+  "homeButton": "หน้าหลัก",
+  "test1": "แบบทดสอบที่ 1",
+  "layoutAndStyle": "การจัดการหน้าเว็บ",
+  "test2": "แบบทดสอบที่ 2",
+  "formAndTable": "การจัดการหน้าฟอร์ม",
+  "move": "เลื่อนรูปแบบ",
+  "position": "เปลี่ยนตำแหน่ง",
+  "submitButton": "ส่งข้อมูล",
+  "resetButton": "ล้างข้อมูล",
+  "title": "คำนำหน้า",
+  "mr": "นาย",
+  "mrs": "นาง",
+  "miss": "นางสาว",
+  "firstName": "ชื่อจริง",
+  "lastName": "นามสกุล",
+  "birthDate": "วันเกิด",
+  "selectDate": "เดือน/วัน/ปี",
+  "nation": "สัญชาติ",
+  "option": "- - กรุณาเลือก - -",
+  "american": "อเมริกัน",
+  "chinese": "จีน",
+  "thai": "ไทย",
+  "nationId": "เลขบัตรประชาชน",
+  "gender": "เพศ",
+  "male": "ชาย",
+  "female": "หญิง",
+  "preferNotSay": "ไม่ระบุ",
+  "phoneNumber": "หมายเลขโทรศัพท์มือถือ",
+  "passportId": "หนังสือเดินทาง",
+  "expectedSalary": "เงินเดือนที่คาดหวัง",
+  "name": "ชื่อ",
+  "operation": "จัดการ"
 }
