--- a/src/locales/th.json
+++ b/src/locales/th.json
@@ -8,7 +8,7 @@
   "position": "เปลี่ยนตำแหน่ง",
   "submitButton": "ส่งข้อมูล",
   "resetButton": "ล้างข้อมูล",
-  "title": "คำนำหน้า",
+  "title": "คำนำหน้าชื่อ",
   "mr": "นาย",
   "mrs": "นาง",
   "miss": "นางสาว",
@@ -30,5 +30,12 @@
   "passportId": "หนังสือเดินทาง",
   "expectedSalary": "เงินเดือนที่คาดหวัง",
   "name": "ชื่อ",
-  "operation": "จัดการ"
+  "operation": "จัดการ",
+  "titleIsRequired": "จำเป็นต้องกรอกคำนำหน้าชื่อ",
+  "firstNameIsRequired": "จำเป็นต้องกรอกชื่อจริง",
+  "lastNameIsRequired": "จำเป็นต้องกรอกนามสกุล",
+  "birthIsRequired": "จำเป็นต้องกรอกวันเดือนปีเกิด",
+  "nationalIsRequired": "จำเป็นต้องกรอกสัญชาติ",
+  "phoneNumberIsRequired": "จำเป็นต้องกรอกหมายเลขโทรศัพท์มือถือ",
+  "expectedSalaryIsRequired": "จำเป็นต้องกรอกเงินเดือนที่คาดหวัง"
 }
